--- a/public/popup.html
+++ b/public/popup.html
@@ -20,6 +20,8 @@
     </div>
     
     <button id="toggle-debugger">Toggle Debugger</button>
+    
+    <div id="error-message" style="display: none; color: #e74c3c; margin-top: 10px; padding: 10px; border: 1px solid #e74c3c; border-radius: 4px; font-size: 12px;"></div>
   </div>
   <script type="module" src="js/popup.js"></script>
 </body>
