Implement extension page approach with dedicated debugger UI

--- a/public/popup.html
+++ b/public/popup.html
@@ -19,7 +19,7 @@
       </select>
     </div>
     
-    <button id="toggle-debugger">Toggle Debugger</button>
+    <button id="open-debugger">Open Debugger</button>
     
     <div id="error-message" style="display: none; color: #e74c3c; margin-top: 10px; padding: 10px; border: 1px solid #e74c3c; border-radius: 4px; font-size: 12px;"></div>
   </div>
